# price-validation-tool

./: .gitignore  PriceValidation.spec  README.md  build_exe.bat  config.json  pyproject.toml
PriceValidation-v1.2.0/_internal/numpy-2.4.4.dist-info/: RECORD
PriceValidation-v1.2.0/data/master price source/DT/: Master price table_DT_ACROX_20260319.xlsx  Master price table_DT_DARFON 20260402.xlsx  Master price table_DT_LITEON_20260402.xlsx  Master price table_DT_PRIMAX_20260331.xlsx  Rev.001_Master price table_DT_Chicony_Description update_20260402.xlsx
PriceValidation-v1.2.0/data/master price source/Peripheral/: Master price table_Peripheral_ACROX_20260316.xlsx  Master price table_Peripheral_DARFON 20251007 update.xlsx  Master price table_Peripheral_LITEON_20251216_Approved.xlsx  Master price table_Peripheral_PRIMAX_20260115 update (FY26).xlsx  (+1 more)
PriceValidation-v1.2.0/data/pricing_template/: Pricing_Template_InputDevices.xlsx
data/pricing_template/: Pricing_Template_InputDevices.xlsx
data/report/20260411_052405_UTC/: Report_Primax_FY26.xlsx
data/report/20260411_053309_UTC/: Report_Primax_FY26.xlsx
data/supplier_shipments/Primax/: Rebate and Spending report Primax_2026 03.xlsx
src/price_validation/: main.py
src/price_validation/config/: paths.py  settings.py
src/price_validation/consolidation/: pipeline.py
src/price_validation/ingestion/: fetch.py  loader.py
src/price_validation/report/: writer.py
src/price_validation/ui/: app.py
src/price_validation/validation/: compare.py
tests/: test_compare_cartesian.py
(+22 files in other folders)
