[tool.poetry]
name = "price-validation-tool"
version = "1.1.4"
description = "Validate pricing template against supplier shipment data"
authors = ["max84517"]
packages = [{ include = "price_validation", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
openpyxl = "^3.1.5"
pandas = "^2.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0"

[tool.poetry.scripts]
price-validation = "price_validation.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

